# git-hotspots

./: .gitignore  .gitmodules  Cargo.toml  README.md  bacon.toml
.github/: labeler.yml
.github/workflows/: integration.yml
discovery/: Cargo.toml
discovery/src/: lib.rs  tests.rs
git-hotspots/: Cargo.toml  build.rs
git-hotspots/src/: args.rs  main.rs
insight/: Cargo.toml
insight/src/: lib.rs
parser/: Cargo.toml  build.rs
parser/src/: lib.rs
parser/src/fixtures/go/: method.1.go  multi_functions.1.go
parser/src/fixtures/lua/: multi_functions.1.lua  no_function.1.lua
parser/src/fixtures/rust/: method.rs  no_function.rs
parser/src/go/: mod.rs  tests.rs
parser/src/lua/: mod.rs  tests.rs
parser/src/parser/: go.rs  lua.rs  mod.rs  rust.rs
parser/src/parser/fixtures/: go.mod
parser/src/parser/fixtures/go/: method.1.go  one_function.1.go
parser/src/parser/fixtures/lua/: method.1.lua  one_function.1.lua
parser/src/parser/fixtures/rust/: mod.rs  multi_functions.rs  one_function.rs
parser/src/parser/go/: mod.rs  tests.rs
parser/src/parser/lua/: mod.rs  tests.rs
parser/src/parser/queries/: go.scm  rust.scm
parser/src/parser/rust/: mod.rs  tests.rs
parser/src/queries/: lua.scm
parser/src/rust/: mod.rs  tests.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
