[workspace]
members = ["parser", "discovery", "utilities", "insight", "git-hotspots"]

[workspace.package]
version = "0.0.7"
edition = "2021"
rust-version = "1.69"
authors = ["Arsham <arsham@duck.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/git-hotspots"
repository = "https://github.com/arsham/git-hotspots"
keywords = ["git", "github", "inspection"]
categories = ["command-line-utilities", "development-tools"]
description = " A tool to find hotspots in your git repository."

[workspace.dependencies]
hotspots-parser = { path = "parser", version = "0.0.7" }
hotspots-discovery = { path = "discovery", version = "0.0.7" }
hotspots-insight = { path = "insight", version = "0.0.7" }
hotspots-utilities = { path = "utilities", version = "0.0.7" }

[profile.dev]
incremental = true
codegen-units = 1024
lto = "off"
debug = 0

[profile.test]
incremental = true
codegen-units = 1024
lto = "off"
debug = 0

[profile.release]
strip = true
