[package]
name = "hotspots-discovery"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
categories.workspace = true

[dependencies]
detect-lang = "0"
walkdir = "2"
rayon = "1"
log = "0"

[dev-dependencies]
tempfile = "3"
hotspots-utilities = { workspace = true }
speculoos = "*"
