[package]
name = "hotspots-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
detect-lang = "0"
walkdir = "2"
rayon = "1"
log = "0"

[dev-dependencies]
tempfile = "3"
hotspots-utilities = { workspace = true }
speculoos = "0"
