[package]
name = "git-hotspots"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
categories.workspace = true

[dependencies]
hotspots-parser = { workspace = true }
hotspots-discovery = { workspace = true }
hotspots-insight = { workspace = true }
structopt = { version = "0.3", features = ["color"] }
anyhow = "1"
thiserror = "1"
prettytable-rs = "^0.10"
log = "0"
env_logger = "0"
rayon = "1"
indicatif = "0"
