[package]
name = "git-hotspots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
hotspots-parser = { workspace = true }
hotspots-discovery = { workspace = true }
hotspots-insight = { workspace = true }
structopt = { version = "0.3", features = ["color"] }
anyhow = "1"
thiserror = "1"
prettytable-rs = "^0.10"
log = "0"
env_logger = "0"
rayon = "1"
indicatif = "0"
