[package]
name = "hotspots-insight"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
categories.workspace = true

[dependencies]
thiserror = "1"
grep-searcher = "0"
grep-matcher = "0"
grep-regex = "0"

[dev-dependencies]
hotspots-utilities = { workspace = true }
tempfile = "3"
git2 = "0"
speculoos = "0"
itertools = "0"
