[package]
name = "parser"
version = "0.0.2"
edition = "2021"

[dependencies]
tree-sitter = ">= 0.20"
discovery = { path = "../discovery" }
thiserror = "1"
include_dir = "0"
rayon = "1"
indicatif = "0"
log = "0"

[dev-dependencies]
itertools = "*"
speculoos = "0"

[build-dependencies]
cc = "1"
npm_rs = "1"
