[package]
name = "hotspots-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
categories.workspace = true

[dependencies]
tree-sitter = ">= 0.20"
hotspots-discovery = { workspace = true }
thiserror = "1"
include_dir = "0"
rayon = "1"
indicatif = "0"
log = "0"

[dev-dependencies]
itertools = "*"
speculoos = "0"

[build-dependencies]
cc = "1"
npm_rs = "1"
