[package]
name = "hotspots-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
tree-sitter = ">= 0.20"
tree-sitter-rust = ">= 0.20"
tree-sitter-go = ">= 0.19"
tree-sitter-lua = ">= 0.0.14"
hotspots-discovery = { workspace = true }
thiserror = "1"
include_dir = "0"
rayon = "1"
indicatif = "0"
log = "0"

[dev-dependencies]
itertools = "0"
speculoos = "0"

[build-dependencies]
cc = "1"
npm_rs = "1"
