[package]
name = "hotspots-utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
documentation = "https://docs.rs/hotspots-utilities"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
tempfile = "3"
git2 = "0"
